--- a/Style.css
+++ b/Style.css
@@ -61,6 +61,7 @@
     right: 20px;
 }
 
+
 .student-table {
     width: 100%;
     border-collapse: collapse;
@@ -80,6 +81,29 @@
     color: black;
     text-align: center;
     border: 1px solid black;
+    padding: 12px;
+}
+
+.teacher-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+.teacher-table th {
+    background-color: rgb(56, 55, 55);
+    color: white;
+    padding: 12px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+.teacher-table td {
+    background-color: white;
+    color: black;
+    text-align: center;
+    border: 1px solid black;
+    padding: 12px;
 }
 
 .buttonUpdate {
@@ -88,28 +112,28 @@
     text-align: center;
 }
 
-.deleteStudent {
+.buttonDelete {
     background-color: red;
     color: white;
     text-align: center;
 }
 
 
-#studentUpdate {
+#itemUpdate {
     text-align: center;
     margin-top: 30px;
 }
 
-#studentUpdate h1 {
+#itemUpdate h1 {
     text-align: center;
     margin-bottom: 30px;
 }
 
-#studentUpdate div {
+#itemUpdate div {
     margin-bottom: 20px;
 }
 
-#studentUpdate Label {
+#itemUpdate Label {
     display: inline-block;
     width: 180px;
     text-align: left;
@@ -119,10 +143,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#studentUpdate input[type="text"],
-#studentUpdate input[type="email"],
-#studentUpdate input[type="number"],
-#studentUpdate input[type="date"] {
+#itemUpdate input[type="text"],
+#itemUpdate input[type="email"],
+#itemUpdate input[type="number"],
+#itemUpdate input[type="date"] {
     display: inline-block;
     width: 180px;
     text-align: left;
@@ -133,7 +157,7 @@
     font-family: Verdana, 'Geneva', Tahoma, sans-serif;
 }
 
-#studentUpdate input[type="submit"] {
+#itemUpdate input[type="submit"] {
     display: block;
     margin: 30px auto 20px auto;
     padding: 7px 50px;
@@ -144,7 +168,7 @@
     cursor: pointer;
 }
 
-#studentUpdate input[type="submit"]:hover {
+#itemUpdate input[type="submit"]:hover {
     background-color: green;
     color: white;
 }
